test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/promise-with-extended-attribute.widl
interface Foo {
  Promise<[XAttr] DOMString> foo(any param);
};
